--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*----------------------------------------------------- Content for all Pages----------------------------------------------------------------------- */
 :root{
     --primary-color: #CBE54E;
     --secondary-color: #985A9D;
@@ -6,7 +7,7 @@
     --h2-size:30pt
 }
 
-h1,h2{
+h1,h2,h3{
     text-align: center;
     color: var(--secondary-color);
 }
@@ -17,9 +18,22 @@ h1{
     margin-bottom: 80px;
 }
 
+h2{
+    margin: 60px;
+    font-size: 45pt;
+    font-weight: bold;
+}
+h3{
+    font-size:25pt ;
+    font-weight: bold;
+}
+
+
+
 body{
     font-family:Arial, Helvetica, sans-serif;
 }
+/**************************************************************** Navegation************************************************************************* */
 .logo{
     height: 150px;
 }
@@ -49,8 +63,6 @@ body{
     
   }
 
-  
-    
   .image-wrapper{
     text-align: left;  
     margin-left: 100px;
@@ -69,7 +81,7 @@ nav li a {
 
 nav li a:hover {
     color: #fffdfd;
-}*/
+}
 
 .image-container {
     width: 100%; 
@@ -84,12 +96,53 @@ nav li a:hover {
     height: 100%; 
     object-fit: cover;
    }
+   #shopNowButton{
+    background-color: #985A9D;
+    color: #ffffff;
+    margin-top: 30px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: #CBE54E double 0.3em;
+    border-top-right-radius: 30%;
+    border-bottom-left-radius: 30%;
+    font-weight: bold;
+    text-decoration: none;
+    color:#ffffff
+   }
+   .button{
+display: flex;
+justify-content: flex-end;
+margin-right: 140px;
+   }
+   
+   #shopNowButton a:hover{
+    color: #985A9D;
+   }
+   #shopNowButton:hover{
+    background-color:#CBE54E;
+    color: #985A9D;
+   }
+/* --------------------------------------------------------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------Home Page-------------------------------------------------------------------- */
 
-
-
-.product{
-    width: 500px;
+/******************************************************************* Get to know Us*************************************************************** */
+.container{
+    background-color: #CBE54E;
+    width: 75%;
+   margin-left: 200px;
+   display: flex;
+   flex-direction: row;
 }
+
+.container p{
+    padding-top: 40px;
+    padding-left: 30px;
+}
+.product{ /* Image Get to Know Us */ 
+    width: 600px;
+}
+
 .description{
     padding-right: 20px;
     max-width: 500px;
@@ -99,19 +152,16 @@ nav li a:hover {
     display: flex;
     justify-content: center;  
 }
-
-
-
-
 .image{
     width: 423px;
     height: 329px;
 }
 
+/***************************************************************** Latest Creations *****************************************************************/
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 423px);
-    grid-template-rows: repeat(3, 329px);
+    grid-template-columns: repeat(2, 423px);
+    grid-template-rows: repeat(2, 329px);
     gap: 15px; 
     justify-content: center;
 }
@@ -123,6 +173,7 @@ nav li a:hover {
     object-fit: cover; 
 }
 
+/**************************************************************** Reviews*************************************************************************** */
 .people{
     width: 246px;
     height: 300px;
@@ -137,37 +188,34 @@ nav li a:hover {
     justify-content: center;
     background-color: var(--primary-color);
 }
-
-
 .reviews{
     display: grid;
-    grid-template-columns: repeat(3, 423px);
+    grid-template-columns: repeat(2, 423px);
     grid-template-rows: repeat(1, 329px);
     gap: 15px; 
     justify-content: center;
     margin-bottom: 300px;
     text-align: center;
 }
-
 .review-container span{
     background-color: #985A9D;
     padding: 23px;
     text-align: center;
 }
 
-
+/************************************************************************ Footer ************************************************************************/
 footer{
     background-color:var(--primary-color) ;
     display: flex;
     justify-content: space-around;
+    margin-top: 60px;
 }
 
-/* *************************************************
-***********************About Page**************** */
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+-----------------------------------------------------------------------About Page-------------------------------------------------------------------*/
 
-   .container{
-    position: relative;
-   }
+
+/********************************************************************* Our Story********************************************************************* */
 
    #pop{
     width: 100%;
@@ -185,46 +233,56 @@ footer{
 }
 .about-container img{
     width: 600px;
-    height: 490px;
+    height: 500px;
 }
 .about-wrap{
     
     display: grid;
     grid-template-columns: repeat(2, 620px);
-    grid-template-rows: repeat(2, 620px);
+    grid-template-rows: repeat(2, 500px);
     justify-content: center;
+    gap: 20px;
+}
+.about-wrap :nth-child(2){
+    background-color: #CBE54E;
 }
 
-/*************************************************************
-************************Products PAge************************/
+.about-wrap p{
+    padding-left: 70px;
+}
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------Products Page-------------------------------------------------------------*/
 #product{
     width: 350px;
-    height: 350px;
+    height: 450px;
     border-radius: 10%;
 }
 .products-wrap{
     display: grid;
     grid-template-columns: repeat(2,500px);
+    justify-content: center;
+    background-color: #985A9D;
 
 }
 
-/************************************************************
-******************Services Page*****************************/
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------Services Page-----------------------------------------------------------------*/
+
+/************************************************************************* What we Offer**************************************************************** */
 .offer-container {
     display: grid;
-    grid-template-columns: repeat(2, 423px);
-    grid-template-rows: repeat(2, 329px);
+    grid-template-columns: repeat(2, 400px);
     gap: 15px; 
     justify-content: center;
 }
-
-
 .offer-item img {
     width: 100%; 
     height: 100%;
     object-fit: cover; 
 }
 
+/************************************************************************* Packages *********************************************************************/
 .packages-container {
     display: grid;
     grid-template-columns: repeat(3, 423px);
@@ -232,9 +290,51 @@ footer{
     justify-content: center;
 }
 
+.package-item{
+    background-color: #985A9D;
+}
+
+.package-item h3,h4{
+    color:#CBE54E;
+}
+.package-item p{
+    color: #fffdfd;
+    width: 90%;
+    margin-left: 25px;
+}
+
+.package-item h4{
+    margin-left: 25px;
+}
+/**************************************************************************** Other******************************************************************** */
 .other-container {
+    margin-top: 60px;
     display: grid;
-    grid-template-columns: repeat(3, 423px);
+    grid-template-columns: repeat(2, 600px);
     gap: 15px; 
     justify-content: center;
+}
+
+.other-container :first-child{
+    background-color: #CBE54E;
+}
+
+.other-container p{
+    padding-left: 30px;
+}
+.other-container form{
+    padding-left: 30px;
+}
+
+.other-container #name, #email, #message{
+    width: 500px;
+    height:35px ;
+    margin-bottom: 15px;
+}
+
+#submit{
+    padding: 8px;
+    background-color: #985A9D;
+    color: #fffdfd;
+    border: #ffffff;
 }
