change black background for reviews

--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ margin-right: 140px;
     text-align: center;
 }
 .review-container span{
-    background-color:#5b0062;
+    background-color:#020003;
     padding: 23px;
     text-align: center;
 }
