--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: var(--h1-size);
     margin-bottom: 80px;
-}
+    }
+
 
 h2{
     margin: 60px;
@@ -36,6 +37,7 @@ body{
 /**************************************************************** Navegation************************************************************************* */
 .logo{
     height: 150px;
+    
 }
 
 .image-wrapper{
@@ -79,8 +81,12 @@ nav li a {
     
 }
 
+nav li:hover{
+    transform: scale(1.8);
+}
+
 nav li a:hover {
-    color: #fffdfd;
+    color:#811c88;
 }
 
 .image-container {
@@ -114,14 +120,15 @@ nav li a:hover {
 display: flex;
 justify-content: flex-end;
 margin-right: 140px;
-   }
+ }
    
    #shopNowButton a:hover{
     color: #985A9D;
    }
    #shopNowButton:hover{
-    background-color:#CBE54E;
-    color: #985A9D;
+    background-color:#811c88;
+    color: #ffffff;
+    transform: scale(1.2);
    }
 /* --------------------------------------------------------------------------------------------------------------------------------------------------
 ---------------------------------------------------------------------Home Page-------------------------------------------------------------------- */
@@ -164,6 +171,7 @@ margin-right: 140px;
     grid-template-rows: repeat(2, 329px);
     gap: 15px; 
     justify-content: center;
+    
 }
 
 
@@ -171,6 +179,24 @@ margin-right: 140px;
     width: 100%; 
     height: 100%;
     object-fit: cover; 
+    animation-name: big;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+     animation-direction: alternate; 
+    }
+    
+       @keyframes big{
+        0%{
+            transform: scale(1);
+        }
+    
+        50%{
+            transform: rotate(2deg);
+        }
+    
+        100%{
+            transform: rotate(-2deg);
+        }
 }
 
 /**************************************************************** Reviews*************************************************************************** */
@@ -250,6 +276,32 @@ footer{
 .about-wrap p{
     padding-left: 70px;
 }
+
+.logomove{
+    animation-name: move;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+     animation-direction: alternate; 
+    }
+    
+       @keyframes move{
+        0%{
+            transform: translateX(20px);
+        }
+    
+        50%{
+            transform: rotate(2deg);
+        }
+    
+        80%{
+            transform: rotate(-2deg);
+        }
+
+        100%{
+            transform: translateX(-20px);
+        }
+}
+
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------
 ----------------------------------------------------------------------------Products Page-------------------------------------------------------------*/
