--- a/css/main.css
+++ b/css/main.css
@@ -421,3 +421,252 @@ footer{
     transform: translateX(-50%);
     opacity: 1;
   }
+
+ 
+    
+  @media (max-width:820px) {
+      /*----------------------------------------------------- Content for all Pages----------------------------------------------------------------------- */
+    .nav-container{
+        gap: .3em; 
+       
+      }
+      
+      header nav ul{
+        padding-top: 40px;
+        
+        gap:1.5em;
+        font-size: 23px;
+      }
+    
+
+h1{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 100pt;
+    }
+
+
+h2{
+    font-size: 40pt;
+   
+}
+h3{
+    font-size:23pt ;
+}
+
+
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------Home Page-------------------------------------------------------------------- */
+
+/******************************************************************* Get to know Us*************************************************************** */
+ .container{
+    background-color: #CBE54E;
+    width: 75%;
+   margin-left: 30px;
+   display: flex;
+   flex-direction:column-reverse;
+}
+
+.container img{
+    padding-left: 90px;
+    padding-top: 30px;
+}
+
+
+
+/***************************************************************** Latest Creations *****************************************************************/
+/.grid-container {
+   width: 90%;
+}
+.grid-item img {
+    width: 90%; 
+    height: 90%;
+    object-fit: cover; 
+ }    
+
+/**************************************************************** Reviews*************************************************************************** */
+ .people{
+    width: 200px;
+    height: 250px;
+    border-radius: 50%;
+}
+
+.review-container{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 450px;
+    justify-content: center;
+    background-color: var(--primary-color);
+}
+.reviews{
+    gap: 8px; 
+    
+}
+/************************************************************************ Footer ************************************************************************/
+footer{
+    background-color:var(--primary-color) ;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: center;
+}
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+-----------------------------------------------------------------------About Page-------------------------------------------------------------------*/
+
+
+/********************************************************************* Our Story********************************************************************* */
+
+.about-container img{
+    width: 400px;
+    height: 400px;
+}
+.about-wrap{
+    
+    display: grid;
+    grid-template-columns: repeat(2, 400px);
+    grid-template-rows: repeat(2, 550px);
+    justify-content: center;
+    gap: 20px;
+}
+.about-wrap :nth-child(2){
+    background-color: #CBE54E;
+}
+
+.about-wrap p{
+    padding-left: 20px;
+    width: 350px;
+    font-size: 11pt;
+}
+ 
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------Products Page-------------------------------------------------------------*/
+ 
+.products-wrap{
+    width: 100%;
+}
+
+.products-wrap p{
+   width: 350px;
+   padding-left: 20px;
+    
+}
+
+.products-wrap img{
+    padding-left: 108px;
+    padding-top: 50px;
+    width: 370px;
+    height: 380px;
+}
+.products-wrap h4{
+    color: #985A9D;
+    padding-left: 20px;
+} 
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------Services Page-----------------------------------------------------------------*/
+
+/************************************************************************* What we Offer**************************************************************** */
+ .offer-container {
+    display: grid;
+    grid-template-columns: repeat(2, 380px);
+    gap: 10px; 
+    
+}
+.offer-item img {
+    width: 90%; 
+    height: 90%;
+}
+
+/************************************************************************* Packages *********************************************************************/
+ .packages-container {
+    display: grid;
+    grid-template-columns: repeat(3, 250px);
+    gap: 10px; 
+    justify-content: center;
+}
+
+
+.package-item p{
+    color: #fffdfd;
+    width: 90%;
+    margin-left: 10px;
+}
+
+/**************************************************************************** Other******************************************************************** */
+ .other-container {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.other-container :first-child{
+    width: 80%;
+    margin-left: 80px;
+}
+
+.other-container :last-child{
+    margin-left: 50px;
+
+
+/* .other-container p{
+    padding-left: 30px;
+}
+.other-container form{
+    padding-left: 30px;
+}
+
+.other-container #name, #email, #message{
+    width: 500px;
+    height:35px ;
+    margin-bottom: 15px;
+}
+
+#submit{
+    padding: 8px;
+    background-color: #985A9D;
+    color: #fffdfd;
+    border: #ffffff;
+}
+
+
+/*Skip Links*/
+
+/* .skip {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    z-index: 999;
+    padding: 1em;
+    background-color: black;
+    color: white;
+    opacity: 0;
+  }
+  .skip:focus {
+    position: static;
+    width: auto;
+    height: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 1;
+  } */ */
+}
+
+ 
+    
+ 
+    
+      
+  
+    
+  
+    
+      
+  
+    
+   */
