--- a/css/main.css
+++ b/css/main.css
@@ -423,25 +423,44 @@ footer{
   }
 
  
+
+
+
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------- VERSION TABLET ---------------------------------------------------------------------*/
     
   @media (max-width:820px) {
       /*----------------------------------------------------- Content for all Pages----------------------------------------------------------------------- */
     .nav-container{
-        gap: .3em; 
+        gap: 8px  
        
       }
       
       header nav ul{
-        padding-top: 40px;
-        
-        gap:1.5em;
+        /* padding-top: 40px; */
+        gap:1.4em;
         font-size: 23px;
       }
-    
+
+      #logo{
+        width: 200px;
+      }
+    .logo{
+
+    }
 
 h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 100pt;
+        /* position: absolute; */
+        top: 40%;
+        right: 10%;
+        text-align: center;
+        color: #ffffff;
+        font-size: 100px;
+        background-color: rgba(152, 90, 157, 0.5);
     }
 
 
@@ -604,24 +623,299 @@ footer{
 
 .other-container :first-child{
     width: 80%;
-    margin-left: 80px;
+    /* margin-left: 80px; */
 }
 
 .other-container :last-child{
-    margin-left: 50px;
+    /* margin-left: 0px; */
+}
+  }
 
 
-/* .other-container p{
+
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------- VERSION MOBILE ---------------------------------------------------------------------*/
+    
+@media (max-width:391px) {
+    /*----------------------------------------------------- Content for all Pages----------------------------------------------------------------------- */
+  
+    /*----------------------------------------------------- Content for all Pages----------------------------------------------------------------------- */
+
+
+    h1{
+       /*  position: absolute; */
+        top: 53%;
+        right: 01%;
+        text-align: center;
+        color: #ffffff;
+        font-size: 75px;
+        background-color: rgba(152, 90, 157, 0.5);
+   
+  
+    }
+
+
+#logo{
+    width: 220px;
+}
+.logo{
+       display: flex;
+      justify-content: center;
+      align-items: center;
+    
+  }
+  
+   .nav-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:1em;  
+  }
+  
+  header nav ul{
+    display: flex;
+    flex-direction: column;
+     padding-top: 1px; 
+    justify-content: space-around;
+    align-items: center;
+    gap:1em;
+    list-style: none;
+    font-size: 25px;
+    font-weight: bold;
+    
+  }
+
+
+    
+
+nav li:hover{
+    transform: scale(1.4);
+}
+
+
+.image-container {
+    width: 100%; 
+    height: 650px;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+   }
+   
+   .image-container img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+   
+   }
+    .nav-container{
+   /*    gap: .3em;  */
+    }
+    
+   
+    
+ 
+  
+  
+
+  
+  
+
+h1{
+
+  
+  }
+
+
+
+
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------Home Page-------------------------------------------------------------------- */
+
+/******************************************************************* Get to know Us*************************************************************** */
+.container{
+  background-color: #CBE54E;
+  width: 80%;
+ margin-left: 20px;
+ display: flex;
+ flex-direction:column-reverse;
+}
+
+.container img{
+    width: 270px;
+    height: 290px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.container p{
+    width: 250px;
+}
+
+
+
+/***************************************************************** Latest Creations *****************************************************************/
+.grid-container {
+    display: grid;
+    grid-template-rows: repeat(4,1fr);
+    grid-template-columns: 400px;
+
+ 
+}
+.grid-item img {
+  width: 80%; 
+  height: 90%;
+  object-fit: cover; 
+}    
+
+/**************************************************************** Reviews*************************************************************************** */
+.people{
+  width: 200px;
+  height: 250px;
+  border-radius: 50%;
+  padding-left: 50px;
+}
+
+.review-container{
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 450px;
+  justify-content: center;
+  background-color: var(--primary-color);
+}
+.reviews{
+ display: grid;
+ grid-template-rows: repeat(2, 1fr);
+ grid-template-columns: 500px;
+}
+
+.reviews p{
+    font-size: 11pt;
+    width: 80%;
+    padding-left: 65px;
+}
+/************************************************************************ Footer ************************************************************************/
+footer{
+  display: grid;
+  grid-template-columns:  1fr;
+  grid-template-rows: repeat(4, 1fr);
+  justify-content: center;
+  padding-left: 40px
+}
+
+
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+-----------------------------------------------------------------------About Page-------------------------------------------------------------------*/
+
+
+/********************************************************************* Our Story********************************************************************* */
+
+.about-container img{
+  width: 380px;
+  height: 380px;
+}
+.about-wrap{
+  
+  display: grid;
+  grid-template-columns: 400px;
+  grid-template-rows: repeat(4, 550px);
+  justify-content: center;
+  gap: 20px;
+}
+
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+----------------------------------------------------------------------------Products Page-------------------------------------------------------------*/
+
+.products-wrap{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(300px, 300px, 350px, 200px);
+}
+
+.products-wrap p{
+ padding-left: 70px;
+ width: 70%;
+  
+}
+
+.products-wrap ul li{
     padding-left: 30px;
 }
-.other-container form{
-    padding-left: 30px;
+
+.products-wrap img{
+  width: 300px;
+  height: 350px;
+  padding-left: 35px;
+  padding-top: 20px;
 }
+.products-wrap h4{
+  color: #985A9D;
+  padding-left: 70px;
+} 
+
+
+/*------------------------------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------Services Page-----------------------------------------------------------------*/
+
+/************************************************************************* What we Offer**************************************************************** */
+.offer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+  
+}
+.offer-item img {
+  width: 80%; 
+  
+}
+
+/************************************************************************* Packages *********************************************************************/
+.packages-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px; 
+  justify-content: center;
+}
+
+
+.package-item p{
+  width: 90%;
+  margin-left: 30px;
+}
+
+/**************************************************************************** Other******************************************************************** */
+.other-container {
+  display: grid;
+  grid-template-columns: repeat(1, 400px);
+  grid-template-rows: repeat(2,500px);
+}
+
+.other-container :first-child{
+    width: 90%;
+}
+
+.other-container :last-child{
+  width: 90%;
+}
+
+.other-container p{
+    padding-left: 10px;
+}
+
 
 .other-container #name, #email, #message{
-    width: 500px;
-    height:35px ;
-    margin-bottom: 15px;
+    width: 300px;
+    height:30px ;
+    margin-bottom: 35px;
+    
 }
 
 #submit{
@@ -630,43 +924,18 @@ footer{
     color: #fffdfd;
     border: #ffffff;
 }
-
-
-/*Skip Links*/
-
-/* .skip {
-    position: absolute;
-    left: -10000px;
-    top: auto;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    z-index: 999;
-    padding: 1em;
-    background-color: black;
-    color: white;
-    opacity: 0;
-  }
-  .skip:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 1;
-  } */ */
 }
 
+  
+
+  
+    
+
+  
+
+  
+    
+
+  
  
-    
- 
-    
-      
-  
-    
-  
-    
-      
-  
-    
-   */
+   
