--- a/css/main.css
+++ b/css/main.css
@@ -450,15 +450,17 @@ footer{
         gap:1.4em;
         font-size: 23px;
       }
-
+      nav li:hover{
+        transform: scale(1.3);
+    }
       #logo{
-        width: 200px;
-      }
+        width: 130px;
+    }
     .logo{
-
+    width: 140px;
     }
 
-h1{
+    h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 100pt;
         /* position: absolute; */
